workloads/fronts/react-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: my-namespace
  labels:
    app.kubernetes.io/component: front
    app.kubernetes.io/instance: front
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: letsencrypt-campus
spec:
  tls:
    - hosts:
        - app-link.campus.clusterdiali.me
      secretName: app-link.campus.clusterdiali.me-tls
  rules:
    - host: app-link.campus.clusterdiali.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 8080
